[project]
name = "sharp-wallet-discovery"
version = "0.1.0"
description = "Discover sharp wallets on Polymarket by Sharpe ratio scoring with hold-to-expiration filtering"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
    "aiosqlite>=0.19,<1",
    "structlog>=24.1,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "aioresponses>=0.7,<1",
    "ruff>=0.3,<1",
]

[project.scripts]
sharp-discover = "sharp_discovery.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sharp_discovery"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
